--- a/BogoTaxi/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/BogoTaxi/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--Main View Controller-->
@@ -29,7 +29,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xZ4-Wr-jKH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="661" y="-575"/>
+            <point key="canvasLocation" x="885" y="-845"/>
         </scene>
         <!--Taximetro Manual View Controller-->
         <scene sceneID="tDA-nI-oWp">
@@ -43,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u6g-mN-SKx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="661" y="93"/>
+            <point key="canvasLocation" x="885" y="-177"/>
         </scene>
         <!--Opciones View Controller-->
         <scene sceneID="4RP-uZ-DXN">
@@ -57,10 +57,109 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PhR-kt-vfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1088" y="93"/>
+            <point key="canvasLocation" x="885" y="519"/>
+        </scene>
+        <!--Estadisticas View Controller-->
+        <scene sceneID="wGF-Z4-b4L">
+            <objects>
+                <viewController storyboardIdentifier="Estadisticas" id="heF-HT-kgZ" customClass="EstadisticasViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kqo-MJ-AjJ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eZS-lJ-pGo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1345" y="516"/>
+        </scene>
+        <!--Panico View Controller-->
+        <scene sceneID="zXh-MY-QUS">
+            <objects>
+                <viewController storyboardIdentifier="Panico" id="1yX-OP-GPN" customClass="PanicoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RYz-1s-4LB">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nuA-2J-Vjl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1772" y="516"/>
+        </scene>
+        <!--Acerca De View Controller-->
+        <scene sceneID="Lab-m8-j8e">
+            <objects>
+                <viewController storyboardIdentifier="AcercaDe" id="QnG-Jd-7p7" customClass="AcercaDeViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cu3-J4-YD0">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5a2-iD-6mY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2191" y="516"/>
+        </scene>
+        <!--Advertencia View Controller-->
+        <scene sceneID="zlZ-ff-vya">
+            <objects>
+                <viewController storyboardIdentifier="Advertencia" id="3lW-mV-SLb" customClass="AdvertenciaViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bIz-6z-sBg">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zij-Af-Lti" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2581" y="516"/>
+        </scene>
+        <!--Detail Reporte View Controller-->
+        <scene sceneID="V2H-PW-4pL">
+            <objects>
+                <viewController storyboardIdentifier="DetailReporte" id="Eho-kQ-TMV" customClass="DetailReporteViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6gi-N0-9jS">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P8n-AU-6hw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2944" y="-200"/>
+        </scene>
+        <!--Consultar Placa View Controller-->
+        <scene sceneID="SLe-VJ-rGE">
+            <objects>
+                <viewController storyboardIdentifier="ConsultarPlaca" id="FeF-Op-WuI" customClass="ConsultarPlacaViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SLq-ch-cRs">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rSN-St-VLG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2952" y="516"/>
         </scene>
     </scenes>
     <classes>
+        <class className="AcercaDeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AcercaDeViewController.h"/>
+        </class>
+        <class className="AdvertenciaViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AdvertenciaViewController.h"/>
+        </class>
+        <class className="ConsultarPlacaViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ConsultarPlacaViewController.h"/>
+        </class>
+        <class className="DetailReporteViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailReporteViewController.h"/>
+        </class>
+        <class className="EstadisticasViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EstadisticasViewController.h"/>
+        </class>
         <class className="LlamadasViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LlamadasViewController.h"/>
         </class>
@@ -69,6 +168,9 @@
         </class>
         <class className="OpcionesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OpcionesViewController.h"/>
+        </class>
+        <class className="PanicoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PanicoViewController.h"/>
         </class>
         <class className="TaximetroManualViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TaximetroManualViewController.h"/>
