--- a/BogoTaxi/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/BogoTaxi/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -115,6 +115,20 @@
             </objects>
             <point key="canvasLocation" x="2581" y="516"/>
         </scene>
+        <!--Llamada De Emergencia View Controller-->
+        <scene sceneID="fzd-CF-yE7">
+            <objects>
+                <viewController storyboardIdentifier="LlamadaEmergencia" id="q9U-Ia-F5A" customClass="LlamadaDeEmergenciaViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4RH-NV-o0W">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V08-Z0-T1T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3315" y="524"/>
+        </scene>
         <!--Detail Reporte View Controller-->
         <scene sceneID="V2H-PW-4pL">
             <objects>
@@ -159,6 +173,9 @@
         </class>
         <class className="EstadisticasViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EstadisticasViewController.h"/>
+        </class>
+        <class className="LlamadaDeEmergenciaViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LlamadaDeEmergenciaViewController.h"/>
         </class>
         <class className="LlamadasViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LlamadasViewController.h"/>
