--- a/BogoTaxi/en.lproj/MainStoryboard_iPad.storyboard
+++ b/BogoTaxi/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -168,10 +168,43 @@
             </objects>
             <point key="canvasLocation" x="4600" y="860"/>
         </scene>
+        <!--Actualizar Taximetro View Controller-->
+        <scene sceneID="tKX-EO-szc">
+            <objects>
+                <viewController storyboardIdentifier="Actualizar" id="QG2-RJ-zS8" customClass="ActualizarTaximetroViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="69U-Km-noa">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hRp-pA-HkQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6250" y="855"/>
+        </scene>
+        <!--Opciones Ciudad View Controller-->
+        <scene sceneID="Nvb-jG-EbZ">
+            <objects>
+                <viewController storyboardIdentifier="OpcionCiudad" id="AuR-jP-JZL" customClass="OpcionesCiudadViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mm5-zF-E4b">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1bz-X5-aN7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6258" y="-260"/>
+        </scene>
     </scenes>
     <classes>
         <class className="AcercaDeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AcercaDeViewController.h"/>
+        </class>
+        <class className="ActualizarTaximetroViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ActualizarTaximetroViewController.h"/>
         </class>
         <class className="AdvertenciaViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AdvertenciaViewController.h"/>
@@ -193,6 +226,9 @@
         </class>
         <class className="MainViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MainViewController.h"/>
+        </class>
+        <class className="OpcionesCiudadViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OpcionesCiudadViewController.h"/>
         </class>
         <class className="OpcionesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OpcionesViewController.h"/>
