--- a/BogoTaxi/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/BogoTaxi/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -143,6 +143,34 @@
             </objects>
             <point key="canvasLocation" x="2944" y="-200"/>
         </scene>
+        <!--Opciones Ciudad View Controller-->
+        <scene sceneID="S48-M8-iRK">
+            <objects>
+                <viewController storyboardIdentifier="OpcionCiudad" id="bKa-Kn-bgG" customClass="OpcionesCiudadViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Tx-du-NEg">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Szs-zF-Ug2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3666" y="-132"/>
+        </scene>
+        <!--Actualizar Taximetro View Controller-->
+        <scene sceneID="uyS-OQ-F5b">
+            <objects>
+                <viewController storyboardIdentifier="Actualizar" id="NDt-QV-icw" customClass="ActualizarTaximetroViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bim-NY-T6S">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rJc-hm-nGG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3666" y="519"/>
+        </scene>
         <!--Consultar Placa View Controller-->
         <scene sceneID="SLe-VJ-rGE">
             <objects>
@@ -161,6 +189,9 @@
     <classes>
         <class className="AcercaDeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AcercaDeViewController.h"/>
+        </class>
+        <class className="ActualizarTaximetroViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ActualizarTaximetroViewController.h"/>
         </class>
         <class className="AdvertenciaViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AdvertenciaViewController.h"/>
@@ -182,6 +213,9 @@
         </class>
         <class className="MainViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MainViewController.h"/>
+        </class>
+        <class className="OpcionesCiudadViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OpcionesCiudadViewController.h"/>
         </class>
         <class className="OpcionesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OpcionesViewController.h"/>
